package oop.examples.ch01.ex01;

public class Animal {
    public String makeSound() {
        return "???";
    }

    public void move() {
        System.out.println("[Animal] is moving");
    }
}
