package oop.examples.ch01.ex01;

public class CrawlingAnimal extends Animal {
    @Override
    public void move() {
        System.out.println("[CrawlingAnimal] is moving");
    }
}
