package oop.examples.ch01.ex01;

public class WalkingAnimal extends Animal {

    @Override
    public void move() {
        System.out.println("[WalkingAnimal] is moving");
    }
}
