@startuml
class Animal {
    + makeSound()
    + move()
}

Animal <|-- WalkingAnimal
Animal <|-- SwimmingAnimal
Animal <|-- FlyingAnimal
Animal <|-- CrawlingAnimal

WalkingAnimal <|-- Dog
WalkingAnimal <|-- Cat

CrawlingAnimal <|-- TwoLeggedDog


FlyingAnimal <|-- Bird

class CrawlingAnimal {
}

class WalkingAnimal {

}

class Dog {
    + makeSound()
    + move()
}

class Cat {
    + makeSound()
    + move()
}
class Bird {
    + makeSound()
    + move()
}

class TwoLeggedDog {
    + makeSound()
    + move()
}


class Application

Application o-- Animal

@enduml